--- a/docker/development/docker-compose.yml
+++ b/docker/development/docker-compose.yml
@@ -1,10 +1,10 @@
 version: '3'
 
 services:
-  with-docker-multi-env-development:
+  mail-buddy-development:
     build:
       context: ../../
       dockerfile: docker/development/Dockerfile
-    image: with-docker-multi-env-development
+    image: mail-buddy-development
     ports:
       - '3001:3000'
