--- a/docker/production/docker-compose.yml
+++ b/docker/production/docker-compose.yml
@@ -1,10 +1,10 @@
 version: '3'
 
 services:
-  with-docker-multi-env-production:
+  mail-buddy-production:
     build:
       context: ../../
       dockerfile: docker/production/Dockerfile
-    image: with-docker-multi-env-production
+    image: mail-buddy-production
     ports:
       - '3003:3000'
