--- a/docker/development/docker-compose.yml
+++ b/docker/development/docker-compose.yml
@@ -1,10 +1,16 @@
 version: '3'
 
 services:
-  mail-buddy-development:
-    build:
-      context: ../../
-      dockerfile: docker/development/Dockerfile
-    image: mail-buddy-development
+  mail-buddy-database:
+    image: mariadb
+    container_name: mail-buddy-database
+    restart: always
+    environment:
+        MARIADB_DATABASE: Mailbuddy
+        MARIADB_USER: ${DBUSER}
+        MARIADB_PASSWORD: ${DBPASSWORD}
+        MARIADB_RANDOM_ROOT_PASSWORD: '1'
     ports:
-      - '3001:3000'
+        - 3306:3306
+    volumes:
+        - ${DBPATH}:/var/lib/mysql
