--- a/docker/production/docker-compose.yml
+++ b/docker/production/docker-compose.yml
@@ -1,10 +1,25 @@
 version: '3'
 
 services:
-  mail-buddy-production:
+  mail-buddy-development:
     build:
       context: ../../
-      dockerfile: docker/production/Dockerfile
-    image: mail-buddy-production
+      dockerfile: docker/development/Dockerfile
+    image: mail-buddy-development
+    depends_on:
+      - mail-buddy-database
     ports:
-      - '3003:3000'
+      - '3001:3000'
+  mail-buddy-database:
+    image: mariadb
+    container_name: mail-buddy-database
+    restart: always
+    environment:
+        MARIADB_DATABASE: Mailbuddy
+        MARIADB_USER: ${DBUSER}
+        MARIADB_PASSWORD: ${DBPASSWORD}
+        MARIADB_RANDOM_ROOT_PASSWORD: '1'
+    ports:
+        - 3306:3306
+    volumes:
+        - ${DBPATH}:/var/lib/mysql
