--- a/package.json
+++ b/package.json
@@ -7,7 +7,13 @@
   },
   "dependencies": {
     "next": "latest",
+    "prisma": "^5.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "@types/node": "20.7.1",
+    "@types/react": "18.2.23",
+    "typescript": "5.2.2"
   }
 }
