--- a/package.json
+++ b/package.json
@@ -6,6 +6,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "@prisma/client": "^5.3.1",
+    "antd": "^5.9.4",
+    "axios": "^1.5.1",
+    "bcrypt": "^5.1.1",
+    "cookies": "^0.8.0",
     "next": "latest",
     "prisma": "^5.3.1",
     "react": "^18.2.0",
@@ -14,6 +19,7 @@
   "devDependencies": {
     "@types/node": "20.7.1",
     "@types/react": "18.2.23",
+    "sass": "^1.68.0",
     "typescript": "5.2.2"
   }
 }
