--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.5.1",
     "bcrypt": "^5.1.1",
     "cookies": "^0.8.0",
+    "dotenv": "^16.3.1",
     "next": "latest",
     "prisma": "^5.3.1",
     "react": "^18.2.0",
