--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cookies": "^0.8.0",
     "dotenv": "^16.3.1",
     "next": "latest",
+    "openai": "^4.11.0",
     "prisma": "^5.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
