Fixed docker shennanigans

--- a/docker/production/docker-compose.yml
+++ b/docker/production/docker-compose.yml
@@ -1,25 +1,51 @@
 version: '3'
 
 services:
-  mail-buddy-development:
-    build:
-      context: ../../
-      dockerfile: docker/development/Dockerfile
-    image: mail-buddy-development
-    depends_on:
-      - mail-buddy-database
-    ports:
-      - '3001:3000'
-  mail-buddy-database:
-    image: mariadb
-    container_name: mail-buddy-database
-    restart: always
-    environment:
-        MARIADB_DATABASE: Mailbuddy
-        MARIADB_USER: ${DBUSER}
-        MARIADB_PASSWORD: ${DBPASSWORD}
-        MARIADB_RANDOM_ROOT_PASSWORD: '1'
-    ports:
-        - 3306:3306
-    volumes:
-        - ${DBPATH}:/var/lib/mysql
+    mail-buddy-database:
+        image: mariadb
+        container_name: mail-buddy-database
+        restart: always
+        environment:
+            MARIADB_DATABASE: Mailbuddy
+            MARIADB_USER: ${DBUSER}
+            MARIADB_PASSWORD: ${DBPASSWORD}
+            MARIADB_RANDOM_ROOT_PASSWORD: '1'
+        ports:
+            - 3306:3306
+        volumes:
+            - ${DBPATH}:/var/lib/mysql
+        networks:
+            - mailbuddynetwork
+    phpmyadmin:
+        image: phpmyadmin/phpmyadmin
+        links:
+            - mail-buddy-database
+        environment:
+            PMA_HOST: mail-buddy-database
+            PMA_PORT: 3306
+            PMA_ARBITRARY: 1
+        restart: always
+        ports:
+            - 8081:80
+        networks:
+            - mailbuddynetwork
+    mailbuddy:
+        build:
+            context: ../../
+            dockerfile: docker/development/Dockerfile
+        image: mailbuddy
+        ports:
+            - '3001:3000'
+        depends_on:
+            - mail-buddy-database
+        networks:
+            - mailbuddynetwork
+            - proxynetwork
+
+
+networks:
+  mailbuddynetwork:
+    name: mailbuddynetwork
+  proxynetwork:
+    name: swag_proxynetwork
+    external: true
