--- a/docker/development/docker-compose.yml
+++ b/docker/development/docker-compose.yml
@@ -14,6 +14,8 @@ services:
             - 3306:3306
         volumes:
             - ${DBPATH}:/var/lib/mysql
+        networks:
+            - mailbuddynetwork
     phpmyadmin:
         image: phpmyadmin/phpmyadmin
         links:
@@ -25,3 +27,21 @@ services:
         restart: always
         ports:
             - 8081:80
+        networks:
+            - mailbuddynetwork
+    mailbuddy:
+        build:
+            context: ../../
+            dockerfile: docker/development/Dockerfile
+        image: mailbuddy
+        ports:
+            - '3001:3000'
+        depends_on:
+            - mail-buddy-database
+        networks:
+            - mailbuddynetwork
+
+
+networks:
+  mailbuddynetwork:
+    name: mailbuddynetwork
