--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "openai": "^4.11.0",
     "prisma": "^5.3.1",
     "react": "^18.2.0",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
