--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
   },
   "dependencies": {
     "@prisma/client": "^5.3.1",
+    "@types/crypto-js": "^4.1.2",
     "antd": "^5.9.4",
     "axios": "^1.5.1",
     "bcrypt": "^5.1.1",
     "cookies": "^0.8.0",
+    "crypto-js": "^4.1.1",
     "dotenv": "^16.3.1",
     "next": "latest",
     "openai": "^4.11.0",
