--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cookies": "^0.8.0",
     "crypto-js": "^4.1.1",
     "dotenv": "^16.3.1",
+    "firebase": "^10.5.0",
     "next": "latest",
     "openai": "^4.11.0",
     "prisma": "^5.3.1",
