--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "crypto-js": "^4.1.1",
     "dotenv": "^16.3.1",
     "firebase": "^10.5.0",
+    "firebase-admin": "^11.11.0",
     "next": "latest",
+    "nookies": "^2.5.2",
     "openai": "^4.11.0",
     "prisma": "^5.3.1",
     "react": "^18.2.0",
