--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "firebase": "^10.5.0",
     "firebase-admin": "^11.11.0",
     "next": "latest",
+    "nodemailer": "^6.9.7",
     "nookies": "^2.5.2",
     "openai": "^4.11.0",
     "prisma": "^5.3.1",
