--- a/package.json
+++ b/package.json
@@ -6,15 +6,19 @@
     "start": "next start"
   },
   "dependencies": {
+    "@svgr/webpack": "^8.1.0",
     "@types/crypto-js": "^4.1.2",
     "antd": "^5.9.4",
     "axios": "^1.5.1",
+    "babel-loader": "^9.1.3",
     "bcrypt": "^5.1.1",
+    "cookie-cutter": "^0.2.0",
     "cookies": "^0.8.0",
     "crypto-js": "^4.1.1",
     "dotenv": "^16.3.1",
     "firebase": "^10.5.0",
     "firebase-admin": "^11.11.0",
+    "import": "^0.0.6",
     "next": "latest",
     "nodemailer": "^6.9.7",
     "nookies": "^2.5.2",
