--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/crypto-js": "^4.1.2",
     "antd": "^5.9.4",
     "axios": "^1.5.1",
+    "axios-time": "^1.0.0",
     "babel-loader": "^9.1.3",
     "bcrypt": "^5.1.1",
     "cookie-cutter": "^0.2.0",
