fix: Fixed stats permission issue

--- a/docker/development/docker-compose.yml
+++ b/docker/development/docker-compose.yml
@@ -1,35 +1,12 @@
 version: '3'
 
 services:
-    mail-buddy-database:
-        image: mariadb
-        container_name: mail-buddy-database
-        restart: always
-        environment:
-            MARIADB_DATABASE: Mailbuddy
-            MARIADB_USER: ${DBUSER}
-            MARIADB_PASSWORD: ${DBPASSWORD}
-            MARIADB_RANDOM_ROOT_PASSWORD: '1'
+    mailbuddy:
+        build:
+            context: ../../
+            dockerfile: docker/development/Dockerfile
+        image: mailbuddy
         ports:
-            - 3306:3306
+            - '3002:3000'
         volumes:
-            - ${DBPATH}:/var/lib/mysql
-        networks:
-            - mailbuddynetwork
-    phpmyadmin:
-        image: phpmyadmin/phpmyadmin
-        links:
-            - mail-buddy-database
-        environment:
-            PMA_HOST: mail-buddy-database
-            PMA_PORT: 3306
-            PMA_ARBITRARY: 1
-        restart: always
-        ports:
-            - 8081:80
-        networks:
-            - mailbuddynetwork
-
-networks:
-  mailbuddynetwork:
-    name: mailbuddynetwork
+            - ./stats:/app/stats
