--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@svgr/webpack": "^8.1.0",
     "@types/crypto-js": "^4.1.2",
+    "@types/paypal-rest-sdk": "^1.7.9",
     "antd": "^5.9.4",
     "axios": "^1.5.1",
     "axios-time": "^1.0.0",
@@ -24,6 +25,7 @@
     "nodemailer": "^6.9.7",
     "nookies": "^2.5.2",
     "openai": "^4.11.0",
+    "paypal-rest-sdk": "^1.8.1",
     "react": "^18.2.0",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0"
