--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "openai": "^4.11.0",
     "paypal-rest-sdk": "^1.8.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0"
   },
