--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-device-detect": "^2.2.3",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-to-print": "^2.14.15"
   },
   "devDependencies": {
     "@types/node": "20.7.1",
