--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@chatra/chatra": "^1.0.3",
     "@svgr/webpack": "^8.1.0",
     "@types/crypto-js": "^4.1.2",
     "@types/paypal-rest-sdk": "^1.7.9",
