--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/crypto-js": "^4.1.2",
     "@types/paypal-rest-sdk": "^1.7.9",
     "antd": "^5.9.4",
+    "antd-img-crop": "^4.18.0",
     "axios": "^1.5.1",
     "axios-time": "^1.0.0",
     "babel-loader": "^9.1.3",
@@ -24,6 +25,7 @@
     "eslint-plugin-prettier": "^5.0.1",
     "firebase": "^10.5.0",
     "firebase-admin": "^11.11.0",
+    "formidable": "^3.5.1",
     "import": "^0.0.6",
     "next": "latest",
     "nodemailer": "^6.9.7",
@@ -38,6 +40,7 @@
   },
   "devDependencies": {
     "@stylistic/eslint-plugin-js": "^1.4.1",
+    "@types/formidable": "^3.4.5",
     "@types/node": "20.7.1",
     "@types/react": "18.2.23",
     "@typescript-eslint/parser": "^5.62.0",
