--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@chatra/chatra": "^1.0.3",
+    "@sentry/nextjs": "^7.86.0",
     "@svgr/webpack": "^8.1.0",
     "@types/crypto-js": "^4.1.2",
     "@types/paypal-rest-sdk": "^1.7.9",
