--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -29,3 +29,14 @@ jobs:
     - run: npm ci
     # - run: npm run build --if-present
     - run: npm run lint
+
+  deploy:
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v3
+    - name: Create .env File
+      run: |
+          echo "${{ secrets.ENV_FILE }}" > .env
+    - name: Build the Docker image
+      run: docker build . --file docker/production/Dockerfile --tag sitware-business:$(date +%s)
