--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -9,6 +9,10 @@ on:
   pull_request:
     branches: [ "main", "production" ]
 
+env:
+  Registry: ghrc.io
+  IMAGE_NAME: ${{ github.actor }}/sitware-business-${{ steps.extract_branch.outputs.branch }}:$(date +%s)
+
 jobs:
   build:
 
@@ -51,11 +55,10 @@ jobs:
       run: |
           echo $JSON > mailbuddy_priv_key.json
 
-    - name: Set Imagename
-      run: echo "IMAGENAME=sitware-business-${{ steps.extract_branch.outputs.branch }}:$(date +%s)" >> $GITHUB_ENV
-
     - name: Create .env File
       run: |
           echo -e "${{ secrets.ENV_FILE }}" > .env
     - name: Build the Docker image
-      run: docker build . --file docker/production/Dockerfile --tag $IMAGENAME
+      run: |
+      docker build . --file docker/production/Dockerfile --tag ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+      docker push ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
