--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -10,7 +10,7 @@ on:
     branches: [ "main" ]
 
 env:
-  IMAGE_NAME: ghrc.io/${{ github.actor }}/sitware_business_dev:$(date +%Y%m%d%H%M%S)
+  IMAGE_NAME: ghrc.io/printerboi/sitware_business_dev:$(date +%Y%m%d%H%M%S)
 
 jobs:
   build:
@@ -59,5 +59,5 @@ jobs:
     
     - name: Build the Docker image
       run: |
-        docker build . --file docker/production/Dockerfile --tag ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+        docker build . --file docker/production/Dockerfile --tag ${{ env.IMAGE_NAME }}
         docker push ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
