--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -10,7 +10,7 @@ on:
     branches: [ "main" ]
 
 env:
-  IMAGE_NAME: ghcr.io/printerboi/sitware_business:dev
+  IMAGE_NAME: ghcr.io/printerboi/sitware_business_dev:latest
 
 jobs:
   build:
@@ -60,4 +60,4 @@ jobs:
     - name: Build the Docker image
       run: |
         docker build . --file docker/production/Dockerfile --tag ${{ env.IMAGE_NAME }}
-        docker push ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+        docker push ${{ env.IMAGE_NAME }}
