--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "nookies": "^2.5.2",
     "openai": "^4.11.0",
     "paypal-rest-sdk": "^1.8.1",
+    "pino": "^8.17.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-device-detect": "^2.2.3",
