--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@svgr/webpack": "^8.1.0",
     "@types/crypto-js": "^4.1.2",
     "@types/paypal-rest-sdk": "^1.7.9",
+    "ai": "^2.2.29",
     "antd": "^5.9.4",
     "antd-img-crop": "^4.18.0",
     "axios": "^1.5.1",
@@ -27,11 +28,13 @@
     "firebase": "^10.5.0",
     "firebase-admin": "^11.11.0",
     "formidable": "^3.5.1",
+    "gpt-tokenizer": "^2.1.2",
     "import": "^0.0.6",
     "next": "latest",
     "nodemailer": "^6.9.7",
     "nookies": "^2.5.2",
     "openai": "^4.11.0",
+    "openai-streams": "^6.2.0",
     "paypal-rest-sdk": "^1.8.1",
     "pino": "^8.17.0",
     "react": "^18.2.0",
