--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "formidable": "^3.5.1",
     "gpt-tokenizer": "^2.1.2",
     "import": "^0.0.6",
+    "moment": "^2.29.4",
     "next": "latest",
     "nodemailer": "^6.9.7",
     "nookies": "^2.5.2",
