--- a/.github/workflows/production_CI.yml
+++ b/.github/workflows/production_CI.yml
@@ -1,14 +1,14 @@
 # This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
 
-name: Staging CI
+name: Production CI
 
 on:
   push:
     branches: [ "production" ]
 
 env:
-  IMAGE_NAME: ghcr.io/printerboi/sitware_business_prod:latest
+  IMAGE_NAME: ghcr.io/printerboi/sitware_business:latest
 
 jobs:
   build:
@@ -39,17 +39,17 @@ jobs:
     - uses: actions/checkout@v3
     - name: Create sentry File
       run: |
-          echo -e "${{ secrets.SENTRY_FILE_PROD }}" > .sentryclirc
+          echo -e "${{ secrets.SENTRY_FILE }}" > .sentryclirc
 
     - name: Create Firebase File
       env:
-        JSON: ${{ secrets.FIREBASE_FILE_PROD }}
+        JSON: ${{ secrets.FIREBASE_FILE }}
       run: |
           echo $JSON > mailbuddy_priv_key.json
 
     - name: Create .env File
       run: |
-          echo -e "${{ secrets.ENV_FILE_PROD }}" > .env
+          echo -e "${{ secrets.ENV_FILE }}" > .env
 
     - name: Login
       run: |
@@ -71,9 +71,9 @@ jobs:
       # <https://stackoverflow.com/a/70447517>
       run: |
         install -m 600 -D /dev/null ~/.ssh/id_rsa
-        echo "${{ secrets.SSH_PRIVATE_KEY_PROD }}" > ~/.ssh/id_rsa
-        ssh-keyscan -H ${{ secrets.SSH_HOST_PROD }} > ~/.ssh/known_hosts
+        echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+        ssh-keyscan -H ${{ secrets.SSH_HOST }} > ~/.ssh/known_hosts
     - name: connect and pull
-      run: ssh ${{ secrets.SSH_USER_PROD }}@${{ secrets.SSH_HOST_PROD }} "cd ${{ secrets.WORK_DIR_PROD }} && echo ${{ secrets.PAT }} | docker login ghcr.io -u ${{ github.actor }} --password-stdin && docker compose pull && docker compose up -d && exit"
+      run: ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "cd ${{ secrets.WORK_DIR }} && echo ${{ secrets.PAT }} | docker login ghcr.io -u ${{ github.actor }} --password-stdin && docker compose pull && docker compose up -d && exit"
     - name: cleanup
       run: rm -rf ~/.ssh
