--- a/.github/workflows/production_CI.yml
+++ b/.github/workflows/production_CI.yml
@@ -12,7 +12,7 @@ env:
 
 jobs:
   build:
-
+    environment: production
     runs-on: ubuntu-latest
 
     strategy:
@@ -32,6 +32,7 @@ jobs:
     - run: npm run lint
 
   publish:
+    environment: production
     needs: build
     runs-on: ubuntu-latest
 
@@ -61,6 +62,7 @@ jobs:
         docker push ${{ env.IMAGE_NAME }}
 
   deploy:
+    environment: production
     needs: publish
     name: deploy image
     runs-on: ubuntu-latest
