--- a/docker/production/docker-compose.yml
+++ b/docker/production/docker-compose.yml
@@ -2,10 +2,7 @@ version: '3'
 
 services:
     mailbuddy:
-        build:
-            context: ../../
-            dockerfile: docker/development/Dockerfile
-        image: mailbuddy
+        image: ghcr.io/printerboi/sitware_business_dev:latest
         ports:
             - '3002:3000'
         volumes:
