--- a/.github/workflows/staging_CI.yml
+++ b/.github/workflows/staging_CI.yml
@@ -55,7 +55,7 @@ jobs:
     
     - name: Build the Docker image
       run: |
-        docker build . --file docker/production/Dockerfile --tag ${{ env.IMAGE_NAME }}
+        docker build . --file docker/production/Dockerfile --tag ${{ vars.IMAGE_NAME }}
         docker push ${{ env.IMAGE_NAME }}
 
   deploy:
