--- a/.github/workflows/production_CI.yml
+++ b/.github/workflows/production_CI.yml
@@ -56,7 +56,7 @@ jobs:
     - name: Build the Docker image
       run: |
         docker build . --file docker/production/Dockerfile --tag ${{ vars.IMAGE_NAME }}
-        docker push ${{ env.IMAGE_NAME }}
+        docker push ${{ vars.IMAGE_NAME }}
 
   deploy:
     environment: production
