--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@chatra/chatra": "^1.0.3",
+    "@react-pdf/renderer": "^3.1.14",
     "@sentry/nextjs": "^7.86.0",
     "@svgr/webpack": "^8.1.0",
     "@types/crypto-js": "^4.1.2",
@@ -37,11 +38,13 @@
     "openai": "^4.11.0",
     "openai-streams": "^6.2.0",
     "paypal-rest-sdk": "^1.8.1",
+    "pdfmake": "^0.2.9",
     "pino": "^8.17.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
+    "react-pdf": "^7.6.0",
     "react-to-print": "^2.14.15"
   },
   "devDependencies": {
