--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
+    "react-markdown": "^9.0.1",
     "react-pdf": "^7.6.0",
     "react-to-print": "^2.14.15"
   },
