--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
   },
   "dependencies": {
     "@chatra/chatra": "^1.0.3",
+    "@paypal/react-paypal-js": "^8.1.3",
     "@react-pdf/renderer": "^3.1.14",
     "@sentry/nextjs": "^7.86.0",
+    "@stripe/react-stripe-js": "^2.4.0",
+    "@stripe/stripe-js": "^2.3.0",
     "@svgr/webpack": "^8.1.0",
     "@types/crypto-js": "^4.1.2",
     "@types/paypal-rest-sdk": "^1.7.9",
@@ -47,7 +50,8 @@
     "react-markdown": "^9.0.1",
     "react-pdf": "^7.6.0",
     "react-to-print": "^2.14.15",
-    "remark-breaks": "^4.0.0"
+    "remark-breaks": "^4.0.0",
+    "stripe": "^14.11.0"
   },
   "devDependencies": {
     "@stylistic/eslint-plugin-js": "^1.4.1",
