--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "analyze": "ANALYZE=true next build"
   },
   "dependencies": {
     "@chatra/chatra": "^1.0.3",
+    "@next/bundle-analyzer": "^14.0.4",
     "@paypal/react-paypal-js": "^8.1.3",
     "@react-pdf/renderer": "^3.1.14",
     "@sentry/nextjs": "^7.86.0",
