--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-dom": "^18.2.0",
     "react-markdown": "^9.0.1",
     "react-pdf": "^7.6.0",
+    "react-player": "^2.14.1",
     "react-to-print": "^2.14.15",
     "remark-breaks": "^4.0.0",
     "stripe": "^14.11.0"
