--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "test": "npx cypress-cloud run --parallel --record --key 1337  --ci-build-id $(date '+%Y-%m-%d_%H:%M:%S')",
     "analyze": "ANALYZE=true next build"
   },
   "dependencies": {
@@ -28,6 +29,8 @@
     "cookie-cutter": "^0.2.0",
     "cookies": "^0.8.0",
     "crypto-js": "^4.1.1",
+    "cypress": "^12.17.4",
+    "cypress-cloud": "^1.9.6",
     "dotenv": "^16.3.1",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.1",
