--- a/package.json
+++ b/package.json
@@ -54,8 +54,10 @@
     "react-markdown": "^9.0.1",
     "react-pdf": "^7.6.0",
     "react-player": "^2.14.1",
+    "react-syntax-highlighter": "^15.5.0",
     "react-to-print": "^2.14.15",
     "remark-breaks": "^4.0.0",
+    "remark-gfm": "^4.0.0",
     "stripe": "^14.11.0"
   },
   "devDependencies": {
