--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "import": "^0.0.6",
     "moment": "^2.29.4",
     "next": "latest",
+    "next-firebase-auth-edge": "^1.4.3",
     "nodemailer": "^6.9.7",
     "nookies": "^2.5.2",
     "openai": "^4.11.0",
