--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@chatra/chatra": "^1.0.3",
+    "@dnd-kit/core": "^6.1.0",
     "@next/bundle-analyzer": "^14.0.4",
     "@paypal/react-paypal-js": "^8.1.3",
     "@react-pdf/renderer": "^3.1.14",
@@ -52,6 +53,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
+    "react-infinite-canvas": "^1.2.5",
     "react-markdown": "^9.0.1",
     "react-pdf": "^7.6.0",
     "react-player": "^2.14.1",
