--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@chatra/chatra": "^1.0.3",
     "@dnd-kit/core": "^6.1.0",
+    "@dnd-kit/modifiers": "^7.0.0",
     "@next/bundle-analyzer": "^14.0.4",
     "@paypal/react-paypal-js": "^8.1.3",
     "@react-pdf/renderer": "^3.1.14",
