--- a/docker/development/docker-compose.yml
+++ b/docker/development/docker-compose.yml
@@ -7,14 +7,17 @@ services:
             - '3002:3000'
         volumes:
             - ./stats:/app/stats
-        networks:
-            - mailbuddynetwork
-            - proxynetwork
 
-
-networks:
-  mailbuddynetwork:
-    name: mailbuddynetwork
-  proxynetwork:
-    name: swag_proxynetwork
-    external: true
+    qdrant:
+      image: qdrant/qdrant:latest
+      restart: always
+      container_name: qdrant
+      ports:
+        - 6333:6333
+        - 6334:6334
+      expose:
+        - 6333
+        - 6334
+        - 6335
+      volumes:
+        - ./qdrant_data:/qdrant_data
