--- a/docker/production/docker-compose.yml
+++ b/docker/production/docker-compose.yml
@@ -11,6 +11,21 @@ services:
             - mailbuddynetwork
             - proxynetwork
 
+    qdrant:
+      image: qdrant/qdrant:latest
+      restart: always
+      container_name: qdrant
+      ports:
+        - 6333:6333
+        - 6334:6334
+      expose:
+        - 6333
+        - 6334
+        - 6335
+      volumes:
+        - ./qdrant_data:/qdrant_data
+      networks:
+        - mailbuddynetwork
 
 networks:
   mailbuddynetwork:
