--- a/docker/production/docker-compose.yml
+++ b/docker/production/docker-compose.yml
@@ -14,7 +14,7 @@ services:
     qdrant:
       image: qdrant/qdrant:latest
       restart: always
-      container_name: qdrant
+      container_name: qdrant_prod
       expose:
         - 6333
         - 6334
