fix: Changed qdrant address usage

--- a/docker/production/docker-compose.yml
+++ b/docker/production/docker-compose.yml
@@ -23,6 +23,7 @@ services:
         - ./qdrant_data:/qdrant_data
       networks:
         - mailbuddynetwork
+        - proxynetwork
 
 networks:
   mailbuddynetwork:
