--- a/docker/production/docker-compose.yml
+++ b/docker/production/docker-compose.yml
@@ -19,6 +19,9 @@ services:
         - 6333
         - 6334
         - 6335
+      ports:
+        - "6333:6333"
+        - "6334:6334"
       volumes:
         - ./qdrant_data:/qdrant_data
       networks:
