--- a/docker/development/docker-compose.yml
+++ b/docker/development/docker-compose.yml
@@ -1,16 +1,20 @@
 version: '3'
 
 services:
-    qdrant:
-      image: qdrant/qdrant:latest
-      restart: always
-      container_name: qdrant
-      ports:
-        - "6333:6333"
-        - "6334:6334"
-      expose:
-        - 6333
-        - 6334
-        - 6335
-      volumes:
-        - ./qdrant_data:/qdrant_data
+  mailbuddy:
+    image: ghcr.io/printerboi/siteware_business_dev:latest
+    ports:
+      - '3002:3000'
+    volumes:
+      - ./stats:/app/stats
+    networks:
+      - mailbuddynetwork
+      - proxynetwork
+
+
+networks:
+  mailbuddynetwork:
+    name: mailbuddynetwork
+  proxynetwork:
+    name: swag_proxynetwork
+    external: true
