--- a/chatbot/package.json
+++ b/chatbot/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack serve --mode development --open",
-    "build": "webpack --mode production"
+    "start": "webpack serve --mode=development --open",
+    "build": "webpack --mode=production"
   },
   "author": "",
   "license": "ISC",
@@ -24,6 +24,7 @@
     "css-loader": "^7.1.2",
     "html-webpack-plugin": "^5.6.0",
     "node-sass": "^9.0.0",
+    "resolve-url-loader": "^5.0.0",
     "sass-loader": "^14.2.1",
     "style-loader": "^4.0.0",
     "webpack": "^5.91.0",
