--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "axios-time": "^1.0.0",
     "babel-loader": "^9.1.3",
     "bcrypt": "^5.1.1",
+    "colorthief": "^2.4.0",
     "cookie-cutter": "^0.2.0",
     "cookies": "^0.8.0",
     "crypto-js": "^4.1.1",
@@ -55,6 +56,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
+    "react-extract-colors": "^1.0.3",
     "react-infinite-canvas": "^1.2.5",
     "react-markdown": "^9.0.1",
     "react-pdf": "^7.6.0",
