--- a/chatbot/package.json
+++ b/chatbot/package.json
@@ -23,6 +23,7 @@
     "@types/react-dom": "^18.3.0",
     "babel-loader": "^9.1.3",
     "css-loader": "^7.1.2",
+    "dotenv": "^16.4.5",
     "html-webpack-plugin": "^5.6.0",
     "node-sass": "^9.0.0",
     "resolve-url-loader": "^5.0.0",
