--- a/chatbot/tsconfig.json
+++ b/chatbot/tsconfig.json
@@ -19,7 +19,12 @@
       "isolatedModules": true,
       "noEmit": true,
       "jsx": "react-jsx",
-      "typeRoots": ["./node_modules"]
+      "typeRoots": ["./node_modules"],
+      "paths": {
+        "Shared/Components/*": ["../components/*"],
+        "Shared/Firebase/*": ["../firebase/*"],
+        "Shared/Helper/*": ["../helper/*"],
+      },
     },
     "include": [
       "src",
