--- a/chatbot/package.json
+++ b/chatbot/package.json
@@ -11,9 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.7.2",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "axios": "^1.7.2"
   },
   "devDependencies": {
     "@babel/core": "^7.24.7",
