[add-react-chatbot-plugin-setup] injected chatbot script inside the site

--- a/chatbot/tsconfig.json
+++ b/chatbot/tsconfig.json
@@ -19,7 +19,6 @@
       "isolatedModules": true,
       "noEmit": true,
       "jsx": "react-jsx",
-      "typeRoots": ["./node_modules"],
       "paths": {
         "Shared/Components/*": ["../components/*"],
         "Shared/Firebase/*": ["../firebase/*"],
@@ -28,7 +27,7 @@
     },
     "include": [
       "src",
-      "window.d.ts"
+      "window.d.ts",
     ],
     "exclude": [
         "node_modules"
