--- a/chatbot/package.json
+++ b/chatbot/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack serve --mode=development --open",
-    "build": "webpack --mode=production"
+    "start": "webpack serve --open --config webpack.dev.js",
+    "build": "webpack --config webpack.prod.js"
   },
   "author": "",
   "license": "ISC",
@@ -19,16 +19,21 @@
     "@babel/preset-react": "^7.24.7",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.3.0",
+    "@types/webpack-env": "^1.18.5",
     "babel-loader": "^9.1.3",
+    "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^7.1.2",
     "dotenv": "^16.4.5",
     "html-webpack-plugin": "^5.6.0",
     "node-sass": "^9.0.0",
+    "raw-loader": "^4.0.2",
+    "react-hot-loader": "^4.13.1",
     "resolve-url-loader": "^5.0.0",
     "sass-loader": "^14.2.1",
     "style-loader": "^4.0.0",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.0.4"
+    "webpack-dev-server": "^5.0.4",
+    "webpack-merge": "^6.0.1"
   }
 }
