--- a/chatbot/package.json
+++ b/chatbot/package.json
@@ -35,5 +35,6 @@
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.4",
     "webpack-merge": "^6.0.1"
-  }
+  },
+  "packageManager": "^npm@10.2.4"
 }
