--- a/package.json
+++ b/package.json
@@ -31,10 +31,12 @@
     "colorthief": "^2.4.0",
     "cookie-cutter": "^0.2.0",
     "cookies": "^0.8.0",
+    "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
     "cypress": "^12.17.4",
     "cypress-cloud": "^1.9.6",
     "dotenv": "^16.3.1",
+    "dotenv-webpack": "^8.1.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.1",
     "firebase": "^10.5.0",
@@ -69,33 +71,33 @@
     "stripe": "^14.11.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.24.7",
+    "@babel/preset-env": "^7.24.7",
+    "@babel/preset-react": "^7.24.7",
     "@stylistic/eslint-plugin-js": "^1.4.1",
     "@types/formidable": "^3.4.5",
     "@types/node": "20.7.1",
     "@types/react": "18.2.23",
-    "@typescript-eslint/parser": "^5.62.0",
-    "eslint": "^8.54.0",
-    "eslint-config-next": "14.0.3",
-    "eslint-import-resolver-typescript": "^3.6.1",
-    "gts": "^5.2.0",
-    "prettier": "^3.1.0",
-    "sass": "^1.68.0",
-    "typescript": "5.2.2",
-    "@babel/core": "^7.24.7",
-    "@babel/preset-env": "^7.24.7",
-    "@babel/preset-react": "^7.24.7",
     "@types/react-dom": "^18.3.0",
     "@types/webpack-env": "^1.18.5",
+    "@typescript-eslint/parser": "^5.62.0",
     "babel-loader": "^9.1.3",
     "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^7.1.2",
     "dotenv": "^16.4.5",
+    "eslint": "^8.54.0",
+    "eslint-config-next": "14.0.3",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "gts": "^5.2.0",
     "html-webpack-plugin": "^5.6.0",
     "node-sass": "^9.0.0",
+    "prettier": "^3.1.0",
     "raw-loader": "^4.0.2",
     "resolve-url-loader": "^5.0.0",
+    "sass": "^1.68.0",
     "sass-loader": "^14.2.1",
     "style-loader": "^4.0.0",
+    "typescript": "5.2.2",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.4",
