--- a/docker/staging/Dockerfile
+++ b/docker/staging/Dockerfile
@@ -25,6 +25,7 @@ COPY . .
 # This will do the trick, use the corresponding env file for each environment.
 COPY .env.staging.sample .env.production
 RUN yarn build
+RUN cd /app/chatbot && npm run build
 
 # 3. Production image, copy all the files and run next
 FROM base AS runner
@@ -41,7 +42,7 @@ COPY --from=builder /app/public ./public
 # https://nextjs.org/docs/advanced-features/output-file-tracing
 COPY --from=builder --chown=nextjs:nodejs /app/.next/standalone ./
 COPY --from=builder --chown=nextjs:nodejs /app/.next/static ./.next/static
-
+COPY --from=builder /app/chatbot ./.next/
 
 USER nextjs
 
