--- a/chatbot/package.json
+++ b/chatbot/package.json
@@ -24,6 +24,7 @@
     "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^7.1.2",
     "dotenv": "^16.4.5",
+    "dotenv-webpack": "^8.1.0",
     "html-webpack-plugin": "^5.6.0",
     "node-sass": "^9.0.0",
     "raw-loader": "^4.0.2",
